# timauzakov

./: README.md
node/: CMakeLists.txt
node/data/: data.json
node/include/node/: colors.h  libraries.h
node/src/: jsoncpp.cpp  main.cpp
